--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import "./assets/variables";
-@import "./assets/mixins";
+@use "./assets/variables" as *;
+@use "./assets/mixins" as *;
 #root {
   width: 100vw;
   min-height: 100vh;
