--- a/src/components/ConfirmLogoutModal.module.scss
+++ b/src/components/ConfirmLogoutModal.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 .overlay {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
@@ -84,5 +84,5 @@
   transition: $transition;
 }
 .confirmBtn:hover {
-  background: lighten($primary-color, 15%);
+  background: adjust-color($primary-color, $lightness: 15%);
 }
