--- a/src/components/ConfirmModal.module.scss
+++ b/src/components/ConfirmModal.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 .congratsAnim {
   display: flex;
   flex-direction: column;
