--- a/src/components/Home.module.scss
+++ b/src/components/Home.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 .homeContainer {
   padding: 2rem 1rem;
   min-height: 100vh;
