--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 
 .loginContainer {
   display: flex;
@@ -56,7 +56,7 @@
   transition: $transition;
 }
 .loginContainer button:hover {
-  background: linear-gradient(90deg, lighten($primary-color, 15%) 60%, #232323 100%);
+  background: linear-gradient(90deg, adjust-color($primary-color, $lightness: 15%) 60%, #232323 100%);
 }
 
 
