--- a/src/components/Recomendaciones.module.scss
+++ b/src/components/Recomendaciones.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 /* Container principal */
 .recsContainer {
   display: flex;
