--- a/src/components/UploadModal.module.scss
+++ b/src/components/UploadModal.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 .overlay {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
