--- a/src/components/logo.module.scss
+++ b/src/components/logo.module.scss
@@ -1,5 +1,5 @@
-@import "../assets/variables";
-@import "../assets/mixins";
+@use "../assets/variables" as *;
+@use "../assets/mixins" as *;
 .logoContainer {
   position: absolute;
   top: 1rem;
