Corrección de colores en algunos textos

--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -30,7 +30,7 @@
   border-radius: 4px;
   font-size: 1rem;
   font-family: 'Jersey 15', $font-main;
-  color: $background-color;
+  color: #fff;
   outline: none;
   transition: border 0.2s;
 }
