--- a/src/components/Recomendaciones.module.scss
+++ b/src/components/Recomendaciones.module.scss
@@ -22,7 +22,7 @@
 .header h2 {
   font-family: 'Jersey 15', $font-main;
   font-size: 2.7rem;
-  color: $background-color;
+  color: #e6b014;
   margin: 0 0 0.5rem 0;
 }
 
