Updates upload button hover style
Updates the hover state background color of the upload button to use the primary color.
This provides a cleaner visual effect.

--- a/src/components/Closet.module.scss
+++ b/src/components/Closet.module.scss
@@ -173,5 +173,5 @@
   margin-right: auto;
 }
 .uploadBtn:hover {
-  background: adjust-color($primary-color, $lightness: 15%);
+  background: $primary-color;
 }
