--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
+
 @use "./assets/variables" as *;
 @use "./assets/mixins" as *;
-
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
+
 
 :root {
   font-family: 'Jersey 15', monospace;
@@ -15,7 +16,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -25,21 +25,21 @@ a:hover {
   color: #535bf2;
 }
 
-
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background: #fff;
-  color: #181818;
+  background: #181818;
+  color: #fff;
+  font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+  box-sizing: border-box;
+  overflow-y: hidden;
 }
-
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Jersey 15', monospace;
   margin: 0;
 }
-
 
 button {
   border-radius: 8px;
@@ -65,4 +65,71 @@ html, body {
   background: #181818;
   color: #fff;
   font-family: sans-serif;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+:root {
+  font-family: 'Jersey 15', monospace;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light;
+  color: #181818;
+  background-color: #fff;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+
+body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  background: #181818;
+  color: #fff;
+  font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Jersey 15', monospace;
+  margin: 0;
+}
+
+
+button {
+  border-radius: 8px;
+  border: none;
+  padding: 0.7em 1.2em;
+  font-size: 1em;
+  font-family: 'Jersey 15', monospace;
+  background-color: #d9d9d9;
+  color: #181818;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+button:hover {
+  background: #bdbdbd;
+}
+button:focus,
+button:focus-visible {
+  outline: 2px solid #181818;
 }
