--- a/src/components/Recomendaciones.module.scss
+++ b/src/components/Recomendaciones.module.scss
@@ -51,6 +51,10 @@
   width: 100%;
   max-width: 340px;
 }
+.climaCard {
+  align-items: center;
+  justify-content: center;
+}
 
 .climaSelectorRow {
   display: flex;
@@ -59,6 +63,9 @@
   justify-content: center;
   width: 100%;
   position: relative;
+}
+.climaSelectorRow {
+  width: 100%;
 }
 
 .climaIcon {
@@ -88,6 +95,9 @@
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+}
+.climaSelector {
+  align-items: center;
 }
 
 .climaSelector label {
