Updates to new SASS color module syntax
Updates the codebase to use the new SASS color module syntax.

The `adjust-color` function is deprecated and replaced with `color.adjust` for improved compatibility with future SASS versions.
Also, using the `sass:color` module makes the intention more explicit.

--- a/src/components/Closet.module.scss
+++ b/src/components/Closet.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../assets/variables" as *;
 @use "../assets/mixins" as *;
 .categoryContainer {
@@ -56,7 +57,7 @@
   transition: $transition;
 }
 .deleteBtn:hover {
-  background: adjust-color($danger-color, $lightness: 10%);
+  background: $danger-color;
 }
 
 .deleteModal {
