--- a/src/components/Carousel.module.scss
+++ b/src/components/Carousel.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../assets/variables" as *;
 @use "../assets/mixins" as *;
 // Carousel swipe tipo wireframe
@@ -65,7 +66,7 @@
   outline: none;
 }
 .arrow:hover, .arrow:focus {
-  background: adjust-color($primary-color, $lightness: 15%);
+  background: color.adjust($primary-color, $lightness: 15%);
   box-shadow: 0 4px 16px #0003, 0 0 0 2.5px $primary-color inset;
   transform: scale(1.08);
 }
