--- a/src/components/ConfirmLogoutModal.module.scss
+++ b/src/components/ConfirmLogoutModal.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../assets/variables" as *;
 @use "../assets/mixins" as *;
 .overlay {
@@ -84,5 +85,5 @@
   transition: $transition;
 }
 .confirmBtn:hover {
-  background: adjust-color($primary-color, $lightness: 15%);
+  background: color.adjust($primary-color, $lightness: 15%);
 }
