--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../assets/variables" as *;
 @use "../assets/mixins" as *;
 
@@ -56,7 +57,7 @@
   transition: $transition;
 }
 .loginContainer button:hover {
-  background: linear-gradient(90deg, adjust-color($primary-color, $lightness: 15%) 60%, #232323 100%);
+  background: linear-gradient(90deg, color.adjust($primary-color, $lightness: 15%) 60%, #232323 100%);
 }
 
 
